--- a/Home/assets/css/prices/prices_styles.css
+++ b/Home/assets/css/prices/prices_styles.css
@@ -1,62 +1,6 @@
 body{
-
-}
-li a {
-  text-decoration: none;
-  color: rgb(206, 206, 210);
-}
-#brand {
-  margin-left: 20px;
-}
-#nav-container {
-  border-bottom: 1px solid rgb(154, 151, 151);
-}
-#contact {
-  margin-right: 5px;
-}
-li a:hover {
-  text-decoration: underline;
-  font-weight: 700;
-  transition: ease-out 0.1s;
-}
-.buttons-container {
-  display: grid;
-  grid-template-columns: repeat(3,1fr);
-  margin-left: 125px;
+  font-style: arial;
 }
 main div {
   max-width: 800px;
-}
-.massage-imgs {
-  background-image: url(/Home/assets/images/background.jpg);
-  background-size: cover;
-  max-width:400px;
-  min-height: 40vh;
-  border-radius: 15px;
-
-}
-.massage-imgs button {
-  margin-bottom: 80px;
-  border-radius: 2px;
-}
-#pleasure {
-  font-size: 3rem;
-  margin-top: 60px;
-  text-align: center;
-  font-weight: 700;
-  font-size: 1.3rem;
-}
-.length-selector-body-container {
-  position: absolute;
-  top: 75px;
-  right: 200px;
-}
-.massage-type-container {
-  max-width: 300px;
-}
-.full-body-card {
-  border-radius: 5px;
-  border-width: 1px;
-  border-color: gray;
-  border: solid;
 }
