--- a/Home/assets/css/prices/buttons.css
+++ b/Home/assets/css/prices/buttons.css
@@ -5,6 +5,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 10%;
+    padding-bottom: 3%;
 }
 .massage-imgs {
     border-radius: 15px;
@@ -31,8 +32,8 @@
 }
 #pleasure {
     font-size: 3rem;
-    margin-top: 60px;
     text-align: center;
     font-weight: 700;
     font-size: 1.3rem;
+    margin-bottom: 3%;
 }
