--- a/aug2023/Biosys/assets/styles/main.css
+++ b/aug2023/Biosys/assets/styles/main.css
@@ -79,7 +79,7 @@ main img{
     border-right: 45vw solid transparent;
     
 
-    border-bottom: 9vw solid var(--red);
+    border-bottom: 9vw solid var(--blue);
 
     position: inherit;
     top: -8.8vw;
