--- a/aug2023/Biosys/assets/styles/main.css
+++ b/aug2023/Biosys/assets/styles/main.css
@@ -1,7 +1,7 @@
 :root{
     --red:   #be3e5c;
     --white: #ece2d0;
-    --blue: #8b8baee5;
+    --blue: #8b8bae;
     
 
 
@@ -79,10 +79,10 @@ main img{
     border-right: 45vw solid transparent;
     
 
-    border-bottom: 9vw solid var(--blue);
+    border-bottom: 100px solid var(--blue);
 
     position: inherit;
-    top: -8.8vw;
+    top: -100px;
 }
 .whatpage{
     text-align: left;
