--- a/scrimba/src/App.css
+++ b/scrimba/src/App.css
@@ -2,23 +2,26 @@
 /* ! TITLE COMPONENT */
 .Title{
   width: 100%;
+  flex: 1.7;
 }
 .Title h2{
-  font-size: calc(10px + 1.3vw);
+  font-size: 4vmin;
 }
 .Title p{
-  padding: 0px 5%;
-  font-size: calc(8px + 0.75vw);
+  padding: 0px 5.7vmin;
+  font-size: 2.5vmin;
 }
 
 /* ! DICE COMPONENT */
 .Dice{
+  flex: 2;
   display: grid;
-  grid-template-columns: min-content min-content min-content min-content min-content;
-  grid-template-rows: min-content min-content;
-  gap: 5%;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 8%;
+  
 
-  padding: 20px 0px;
+  font-size: calc(10px + 1.3vw);
 }
 .Dice > button {
   background-color: white;
@@ -26,7 +29,7 @@
   border-radius: 5px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   aspect-ratio: 1/1;
-  width: min-content;
+  width: 100%;
   text-align: center;
 }
 .Dice > button:hover{
@@ -40,15 +43,17 @@
 
 /* ! BUTTON COMPONENT */
 .Button{
+  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
 
 }
 .Button > button{
+  font-size: 3vmin; 
   background-color: #5035FF;
   color: white;
-  padding: 1rem 2rem;
+  padding: 2.5vmin 6vmin;
   border-radius: 10px;
   border: none;
 }
