--- a/hearts/style.css
+++ b/hearts/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: black;
+    background-color: rgb(50, 50, 50);
     height: 100vh;
     margin: 0;
     overflow: hidden;
