--- a/hearts/style.css
+++ b/hearts/style.css
@@ -6,6 +6,7 @@ body{
     margin: 0;
     overflow: hidden;
     
+    
 }
 span{
     background: url("https://cdn4.iconfinder.com/data/icons/general-office/91/General_Office_54-256.png");
@@ -20,7 +21,7 @@ span{
     transform: translate(-50%, -50%);
 
     animation: animate 10s linear;
-
+    z-index: 9;
 
 }
 
@@ -45,9 +46,14 @@ audio{
 
 
 
-
-
-
+particle {
+    position: fixed;
+    left: 0;
+    top: 0;
+    border-radius: 50%;
+    pointer-events: none;
+    opacity: 0;
+  }
 
 
 
