--- a/hearts/style.css
+++ b/hearts/style.css
@@ -5,23 +5,21 @@ body{
     height: 100vh;
     margin: 0;
     overflow: hidden;
-    
-    
+
 }
 span{
     background: url("https://cdn4.iconfinder.com/data/icons/general-office/91/General_Office_54-256.png");
-    width: 100px;
-    aspect-ratio: 1/1;
+
     position: absolute;
     background-size: cover;
-    pointer-events: none;
+    cursor: pointer;
 
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
 
-    animation: animate 10s linear;
-    z-index: 9;
+    animation: animate 12s linear;
+    pointer-events:initial;
 
 }
 
@@ -32,16 +30,13 @@ span{
         filter: hue-rotate(0);
     }
     100%{
-        transform: translate(-50%, -5000%);
+        transform: translate(-50%, -3000%);
         opacity: 0;
         filter: hue-rotate(1300deg);
     }
 }
 
-audio{
-    z-index: -9;
 
-}
 
 
 
