--- a/water/src/App.css
+++ b/water/src/App.css
@@ -1,5 +1,14 @@
 @import "./constants.css";
 
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: var(--white);
+    letter-spacing: 2px;
+    line-height: 30px;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
 body{
     margin: 0px;
 
