--- a/water/src/App.css
+++ b/water/src/App.css
@@ -11,7 +11,10 @@
 }
 body{
     margin: 0px;
-
+    background-image: url("/heroBG.png");
+    background-size: 100% 100%;
+    background-position: left;
+    background-attachment: fixed;
 }
 #root{
     height: 3000px;
@@ -19,3 +22,4 @@ body{
 .app{
 
 }
+
