--- a/water/src/css/hero.css
+++ b/water/src/css/hero.css
@@ -1,2 +1,49 @@
 @import "../constants.css";
 
+.Hero{
+
+    width: 100%;
+    height: 100vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.typing{
+    font-size: 60px;
+    padding-bottom: 100px;
+}
+.typed-cursor {
+    font-size: 60px;
+    padding-bottom: 100px;
+
+}
+
+.chevron-container {
+    animation: bounce 1.5s ease-in-out infinite;
+    position: absolute;
+    left: calc(50vw - 10px);
+    bottom: 50px;
+  }
+  
+  .chevron {
+    display: block;
+    margin: auto;
+    height: 20px;
+    width: 20px;
+    border-bottom: 1px solid #000;
+    border-left: 1px solid #000;
+    transform: rotate(-45deg);
+  }
+  
+  @keyframes bounce {
+    0% {
+      transform: translate(0,0);
+    }
+    50% {
+      transform: translate(0,10px);
+    }
+    100% {
+      transform: translate(0,0);
+    }
+  }
