--- a/water/src/css/nav.css
+++ b/water/src/css/nav.css
@@ -2,16 +2,32 @@
 
 
 nav{
-    display: flex;
     height: 40px;
-    width: 70%;
+    width: 60vw;
     border: none;
-    border-radius: 20px;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    padding: 5px 50px;
 
     position: fixed;
+    transform: translateX(-50%);
+    left: 50%;
     top: 0px;
-    transform: translateX(50%);
 
     background-color: var(--teal);
-}
 
+    display: flex;
+    justify-content: space-between;
+}
+nav a:hover::after{
+    content: "";
+    width: 100px;
+    height: 100px;
+    background-color: white;
+    position: relative;
+    top: 10px;
+    left: -50%;
+    transform: translateX(50%);
+
+
+}
