--- a/water/src/App.css
+++ b/water/src/App.css
@@ -15,11 +15,17 @@ body{
     background-size: 100% 100%;
     background-position: left;
     background-attachment: fixed;
+
+
 }
+
 #root{
-    height: 3000px;
+    height: 2000px;
+    margin-bottom: 600px;
 }
 .app{
-
+    height: 1400px;
+    display: flex;
+    flex-direction: column;
 }
 
