--- a/water/src/css/footer.css
+++ b/water/src/css/footer.css
@@ -2,14 +2,19 @@
 
 .footer{
 
-    --footer: var(--dark-blue);
+    /* --footer: var(--dark-blue); */
     /* background-color: var(--footer); */
     outline: dashed 1px red;
-    height: 400px;
-    width: 100%;
+     
 
-    position: relative;
+    position:relative;
+    /* display: inline-block; */
+    height: 400px;
     bottom: 0px;
+    left: 0px;
+    right: 0px;
+
+    
 
 }
 .footer--wave{
@@ -17,8 +22,9 @@
     background-position: center;
     background-size: cover;
     width: 100%;
+    height: 300px;
 
-    aspect-ratio: 900/300;
+    aspect-ratio: 9/3;
 
-    background-image: url("./wave.svg");
+    background-image: url("../../public/wave.svg");
 }
