--- a/hoobank/src/index.css
+++ b/hoobank/src/index.css
@@ -80,3 +80,232 @@ body{
   opacity: 1;
   top: 70px;
 }
+
+
+
+/* !    HERO */
+
+.hero{
+
+  display: flex;
+
+
+  /* background-color: rgba(255, 0, 0, 0.374); */
+  height: 100vh;
+  max-height: 700px;
+}
+.hero-text{
+  /* display: flex; */
+  /* flex-direction: column; */
+
+  flex: 1.3;
+  /* justify-content: center; */
+  margin-top: 100px;
+  margin-left: 50px;
+}
+.get-started{
+  border: 1px #9febf0 solid;
+  border-radius: 50%;
+  background-color: rgb(0 4 15);
+
+  /* display: inline-block; */
+  position: relative;
+  top: -300px;
+  right: 50px;
+  
+  height: 140px;
+  width: 140px;
+  float: right;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.get-started p{
+  font-size: 18px;
+  height: min-content;
+  display: inline-block;
+  width: 70px;
+
+  display: flex;
+  /* justify-content:center; */
+  align-items: center;
+  height: 26px;
+}
+.get-started img{
+  aspect-ratio: 1/1;
+  height: 24px;
+  margin-left: auto;
+  margin-right: 6px;
+}
+
+
+.get-started2-container{
+  display: flex;
+  justify-content: center;
+}
+.get-started2{
+  border: 1px #9febf0 solid;
+  border-radius: 50%;
+  background-color: rgb(0 4 15);
+
+
+  
+  height: 140px;
+  width: 140px;
+  float: right;
+
+  display: none;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.get-started2 p{
+  font-size: 18px;
+  height: min-content;
+  display: inline-block;
+  width: 70px;
+
+  display: flex;
+  /* justify-content:center; */
+  align-items: center;
+  height: 26px;
+}
+.get-started2 img{
+  aspect-ratio: 1/1;
+  height: 24px;
+  margin-left: auto;
+  margin-right: 6px;
+}
+
+
+
+
+
+
+.hero-discount{
+  display: inline;
+
+
+}
+.hero-discount-container{
+  background-color: #1e1b29;
+  display: flex;
+  align-items: center;
+  width: max-content;
+
+  
+  border-radius: 5px;
+  padding: 5px 10px;
+}
+.hero-discount-img{
+  
+}
+.hero-discount-img img{
+  
+}
+.hero-discount p{
+  color: var(--muted);
+  margin-inline: 10px;
+}
+.hero-discount .white{
+  color: white;
+}
+.hero-text h1{
+  font-size: 72px;
+  font-weight: 600;
+  line-height: 90px;
+}
+.highlight{
+  background: radial-gradient(64.18% 64.18% at 71.16% 35.69%, #def9fa .89%, #bef3f5 17.23%, #9dedf0 42.04%, #7de7eb 55.12%, #5ce1e6 71.54%, #33bbcf 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+  font-weight: 600;
+}
+.hero-text-desc{
+  max-width: 450px;
+}
+
+.hero-img{
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+.hero-img img{
+  width: 100%;
+}
+
+.hero-stats{
+  display: flex;
+  flex-wrap: wrap; /* Allows wrapping of child elements */
+  justify-content: center; /* Centers items horizontally */
+  align-items: center; /* Centers items vertically in the row */
+  gap: 30px;
+
+  margin-bottom: 30px;
+  margin-inline: 30px;
+
+}
+.hero-stats div{
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.hero-stats p{
+  display: inline-block;
+  font-size: 20px;
+
+  background: radial-gradient(64.18% 64.18% at 71.16% 35.69%, #def9fa .89%, #bef3f5 17.23%, #9dedf0 42.04%, #7de7eb 55.12%, #5ce1e6 71.54%, #33bbcf 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.hero-stats strong{
+  font-size: 40px;
+  color: white;
+  background: none;
+}
+
+
+
+
+
+
+
+@media screen and (max-width: 750px){
+  .hero{
+    margin-inline: 10px;
+
+  }
+}
+@media screen and (max-width: 570px){
+  .get-started{
+    display: none;
+  }
+  .get-started2{
+    display: flex;
+  }
+
+  .hero-stats{
+    margin-top: 25px;
+  }
+}
+@media screen and (max-width: 1050px){
+  .hero{
+    flex-direction: column;
+    height: max-content;
+    max-height: none;
+  }
+  .hero-text h1{
+    max-width: 700px;
+  }
+}
+
+
+
