--- a/hoobank/src/css/component.css
+++ b/hoobank/src/css/component.css
@@ -1,9 +1,10 @@
 .component{
     width: 100%;
-    height: 500px;
+    /* height: 500px; */
     display: flex;
     gap: 20px;
 }
+
 .comp-half1{
     flex: 1;
 
@@ -22,8 +23,21 @@
     margin-top: 16px;
     color: var(--muted);
     line-height: 30.8px;
+    max-width: 470px;
 }
 .comp-half2{
     flex: 1;
 
+}
+
+
+
+@media screen and (max-width: 1000px){
+    .component{
+        flex-direction: column;
+    }
+    .comp-title{
+        font-size: 40px;
+        line-height: 70.8px;
+    }
 }
